--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 amqp==5.1.1
 asgiref==3.5.2
+autopep8==2.0.2
 billiard==3.6.4.0
 bleach==6.0.0
+braintree==4.18.1
 celery==5.2.7
 certifi==2022.9.24
 cffi==1.15.1
@@ -10,15 +12,21 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cron-descriptor==1.2.35
 cryptography==38.0.3
 defusedxml==0.7.1
 Django==4.1.3
 django-allauth==0.51.0
+django-celery-beat==2.5.0
+django-celery-results==2.5.0
 django-cleanup==7.0.0
+django-dotenv==1.4.2
 django-etc==1.4.0
 django-hitcount==1.3.5
+django-redis==5.2.0
 django-summernote==0.8.20.0
 django-taggit==3.1.0
+django-timezone-field==5.0
 environs==9.5.0
 idna==3.4
 kombu==5.2.4
@@ -27,18 +35,27 @@ oauthlib==3.2.2
 packaging==23.0
 Pillow==9.3.0
 prompt-toolkit==3.0.38
+pycodestyle==2.10.0
 pycparser==2.21
 PyJWT==2.6.0
+PyMySQL==1.0.2
+python-crontab==2.7.1
+python-dateutil==2.8.2
+python-decouple==3.8
 python-dotenv==1.0.0
 python3-openid==3.2.0
 pytz==2022.7.1
+redis==4.5.2
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.3
+stripe==5.2.0
+tzdata==2022.7
 urllib3==1.26.12
 vine==5.0.0
 wcwidth==0.2.6
 webencodings==0.5.1
 whitenoise==5.3.0
-PyMySQL==1.0.2
+django-parler==2.3
+django-localflavor==3.1
