--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ django-cleanup==7.0.0
 django-dotenv==1.4.2
 django-etc==1.4.0
 django-hitcount==1.3.5
+django-localflavor==3.1
+django-parler==2.3
 django-redis==5.2.0
 django-summernote==0.8.20.0
 django-taggit==3.1.0
@@ -43,6 +45,7 @@ python-crontab==2.7.1
 python-dateutil==2.8.2
 python-decouple==3.8
 python-dotenv==1.0.0
+python-stdnum==1.18
 python3-openid==3.2.0
 pytz==2022.7.1
 redis==4.5.2
@@ -57,5 +60,3 @@ vine==5.0.0
 wcwidth==0.2.6
 webencodings==0.5.1
 whitenoise==5.3.0
-django-parler==2.3
-django-localflavor==3.1
